# app/module/sys/api/role/action.go
@@ -4,11 +4,12 @@ import (
 	"devops-http/app/contract"
 	"devops-http/app/module/base/request"
 	"devops-http/app/module/base/response"
+	"devops-http/app/module/sys/model/role"
 	"devops-http/framework/gin"
 )
 
-// GetRoles godoc
-// @Summary 获得角色接口
+// GetRole godoc
+// @Summary 获得单个角色接口
 // @Security ApiKeyAuth
 // @Description 获得角色接口
 // @accept application/json
@@ -17,9 +18,9 @@ import (
 // @Tags Role
 // @Success 200 {object}  response.Response
 // @Router /sys/roles/{id} [get]
-func (a *ApiRole) GetRoles(c *gin.Context) {
+func (a *ApiRole) GetRole(c *gin.Context) {
 	roleId := c.Param("id")
-	result, err := a.service.GetRoleById(roleId, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
+	result, err := a.service.GetRoleById(roleId)
 	res := response.Response{Code: 1, Msg: "查询成功", Data: result}
 	if err != nil {
 		res.Code = -1
@@ -34,13 +35,13 @@ func (a *ApiRole) GetRoles(c *gin.Context) {
 // @Description 获得角色列表接口
 // @accept application/json
 // @Produce application/json
-// @Param data body request.PageRequest true "页数，页大小，筛选条件"
+// @Param data body request.SearchRoleParams true "页数，页大小，筛选条件"
 // @Tags Role
 // @Success 200 {object}  response.Response
 // @Router /sys/roles/list [post]
 func (a *ApiRole) ListRoles(c *gin.Context) {
-	var param request.PageRequest
-	err := c.ShouldBindJSON(&param)
+	var req request.SearchRoleParams
+	err := c.ShouldBindJSON(&req)
 	res := response.Response{Code: 1, Msg: "查询成功", Data: nil}
 	if err != nil {
 		res.Msg = err.Error()
@@ -48,7 +49,7 @@ func (a *ApiRole) ListRoles(c *gin.Context) {
 		c.DJson(res)
 		return
 	}
-	result, err := a.service.GetRoleList(param, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
+	result, err := a.service.GetRoleList(req)
 	if err != nil {
 		res.Msg = err.Error()
 		res.Code = -1
@@ -64,13 +65,13 @@ func (a *ApiRole) ListRoles(c *gin.Context) {
 // @Description 新增角色接口
 // @accept application/json
 // @Produce application/json
-// @Param data body role.DevopsSysRole true "角色"
+// @Param data body role.DevopsSysRoleEntity true "角色"
 // @Tags Role
 // @Success 200 {object}  response.Response
 // @Router /sys/roles/add [post]
 func (a *ApiRole) AddRole(c *gin.Context) {
-	param := make(map[string]interface{}, 0)
-	err := c.ShouldBindJSON(&param)
+	req := role.DevopsSysRoleEntity{}
+	err := c.ShouldBindJSON(&req)
 	res := response.Response{Code: 1, Msg: "新增成功"}
 	if err != nil {
 		res.Msg = err.Error()
@@ -78,7 +79,7 @@ func (a *ApiRole) AddRole(c *gin.Context) {
 		c.DJson(res)
 		return
 	}
-	err = a.service.AddRole(param, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
+	err = a.service.AddRole(req)
 	if err != nil {
 		res.Msg = err.Error()
 		res.Code = -1
@@ -92,13 +93,13 @@ func (a *ApiRole) AddRole(c *gin.Context) {
 // @Description 修改角色接口
 // @accept application/json
 // @Produce application/json
-// @Param data body role.DevopsSysRole true "角色"
+// @Param data body role.DevopsSysRoleEntity true "角色"
 // @Tags Role
 // @Success 200 {object}  response.Response
-// @Router /sys/roles/modify [post]
+// @Router /sys/roles/modify [put]
 func (a *ApiRole) ModifyRole(c *gin.Context) {
-	var param map[string]interface{}
-	err := c.ShouldBindJSON(&param)
+	var req role.DevopsSysRoleEntity
+	err := c.ShouldBindJSON(&req)
 	res := response.Response{Code: 1, Msg: "修改成功"}
 	if err != nil {
 		res.Msg = err.Error()
@@ -106,7 +107,7 @@ func (a *ApiRole) ModifyRole(c *gin.Context) {
 		c.DJson(res)
 		return
 	}
-	err = a.service.ModifyRole(param, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
+	err = a.service.ModifyRole(req)
 	if err != nil {
 		res.Msg = err.Error()
 		res.Code = -1
@@ -134,35 +135,7 @@ func (a *ApiRole) DeleteRole(c *gin.Context) {
 		c.DJson(res)
 		return
 	}
-	err = a.service.DeleteRole(req.Ids, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
-	if err != nil {
-		res.Msg = err.Error()
-		res.Code = -1
-	}
-	c.DJson(res)
-}
-
-// AddResourcesToRole godoc
-// @Summary 给角色新增权限接口
-// @Security ApiKeyAuth
-// @Description 给角色新增权限接口
-// @accept application/json
-// @Produce application/json
-// @Param data body []request.CabinInReceive true "新增api权限Ptype为p； 新增菜单权限Ptype为p3 , source 是角色的id，resource 是资源"
-// @Tags Role
-// @Success 200 {object}  response.Response
-// @Router /sys/roles/add/resources [post]
-func (a *ApiRole) AddResourcesToRole(c *gin.Context) {
-	param := make([]request.CabinInReceive, 0)
-	err := c.ShouldBindJSON(&param)
-	res := response.Response{Code: 1, Msg: "新增成功"}
-	if err != nil {
-		res.Msg = err.Error()
-		res.Code = -1
-		c.DJson(res)
-		return
-	}
-	err = a.service.AddResourcesToRole(param, c.MustMake(contract.KeyGrpc).(contract.ServiceGrpc))
+	err = a.service.DeleteRole(req.Ids)
 	if err != nil {
 		res.Msg = err.Error()
 		res.Code = -1
