# app/module/sys/model/role/entity.go
@@ -1,0 +1,6 @@
+package role
+
+// DevopsSysRoleEntity 角色表
+type DevopsSysRoleEntity struct {
+	DevopsSysRole
+}
