# app/swagger/swagger.yaml
@@ -743,6 +743,51 @@ definitions:
       updated_at:
         type: string
     type: object
+  request.SearchRoleParams:
+    properties:
+      created_at:
+        type: string
+      desc:
+        description: 排序方式:升序false(默认)|降序true
+        type: boolean
+      domain:
+        description: 域
+        type: integer
+      enable:
+        description: 是否启用//radio/1,启用,2,禁用
+        type: integer
+      filter:
+        items:
+          type: string
+        type: array
+      id:
+        description: 主键
+        type: integer
+      name:
+        description: 名称
+        type: string
+      orderKey:
+        description: 排序
+        type: string
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      parentId:
+        description: 角色
+        type: string
+      remark:
+        description: 说明//textarea
+        type: string
+      sort:
+        description: 排序
+        type: integer
+      status:
+        description: 状态//radio/2,隐藏,1,显示
+        type: integer
+      updated_at:
+        type: string
+    type: object
   response.PageResult:
     properties:
       columns: {}
@@ -762,7 +807,7 @@ definitions:
       msg:
         type: string
     type: object
-  role.DevopsSysRole:
+  role.DevopsSysRoleEntity:
     properties:
       created_at:
         type: string
@@ -1015,8 +1060,10 @@ definitions:
         items:
           type: string
         type: array
-      roleName:
-        type: string
+      roles:
+        items:
+          type: string
+        type: array
       salt:
         description: 密码盐
         type: string
@@ -2090,7 +2137,7 @@ paths:
             $ref: '#/definitions/response.Response'
       security:
       - ApiKeyAuth: []
-      summary: 获得角色接口
+      summary: 获得单个角色接口
       tags:
       - Role
   /sys/roles/add:
@@ -2104,7 +2151,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/role.DevopsSysRole'
+          $ref: '#/definitions/role.DevopsSysRoleEntity'
       produces:
       - application/json
       responses:
@@ -2115,32 +2162,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 新增角色接口
-      tags:
-      - Role
-  /sys/roles/add/resources:
-    post:
-      consumes:
-      - application/json
-      description: 给角色新增权限接口
-      parameters:
-      - description: 新增api权限Ptype为p； 新增菜单权限Ptype为p3 , source 是角色的id，resource 是资源
-        in: body
-        name: data
-        required: true
-        schema:
-          items:
-            $ref: '#/definitions/request.CabinInReceive'
-          type: array
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: 给角色新增权限接口
       tags:
       - Role
   /sys/roles/copy:
@@ -2202,7 +2223,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/request.PageRequest'
+          $ref: '#/definitions/request.SearchRoleParams'
       produces:
       - application/json
       responses:
@@ -2216,7 +2237,7 @@ paths:
       tags:
       - Role
   /sys/roles/modify:
-    post:
+    put:
       consumes:
       - application/json
       description: 修改角色接口
@@ -2226,7 +2247,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/role.DevopsSysRole'
+          $ref: '#/definitions/role.DevopsSysRoleEntity'
       produces:
       - application/json
       responses:
